--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,19 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t pdtg/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t $DOCKER_ID/react-test -f ./client/Dockerfile.dev ./client
 
 
 script:
-  - docker run -e CI=true pdtg/react-test npm test
-  - docker image rm -f pdtg/react-test
+  - docker run -e CI=true $DOCKER_ID/react-test npm test
+  - docker image rm -f $DOCKER_ID/react-test
 
 after_success:
-  - docker build -t pdtg/complex-client ./client
-  - docker build -t pdtg/complex-nginx ./nginx
-  - docker build -t pdtg/complex-server ./server
-  - docker build -t pdtg/complex-worker ./worker
+  - docker build -t $DOCKER_ID/complex-client ./client
+  - docker build -t $DOCKER_ID/complex-nginx ./nginx
+  - docker build -t $DOCKER_ID/complex-server ./server
+  - docker build -t $DOCKER_ID/complex-worker ./worker
   #Log in to docker CLI
-  - docker login --username $DOCKER_ID --password $DOCKER_PASSWORD 
+  - echo $DOCKER_PASSWORD | docker login --username $DOCKER_ID --password-stdin
   #Take images and push them to docker hub
   - docker push --all-tags
